force-app/main/default/objects/Activity/fields/AccountTxt__c.field-meta.xml
<CustomField>
    <fullName>AccountTxt__c</fullName>
    <label>Nome da Conta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>