force-app/main/default/objects/Activity/fields/CheckInLocation__c.field-meta.xml
<CustomField>
    <fullName>CheckInLocation__c</fullName>
    <label>Local do Check-In</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>