force-app/main/default/objects/Activity/fields/CheckInTime__c.field-meta.xml
<CustomField>
    <fullName>CheckInTime__c</fullName>
    <label>Horário de Check In</label>
    <type>DateTime</type>
</CustomField>