force-app/main/default/objects/Activity/fields/CheckOutLocation__c.field-meta.xml
<CustomField>
    <fullName>CheckOutLocation__c</fullName>
    <label>Local do Check-Out</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>