force-app/main/default/objects/Activity/fields/CheckOutTime__c.field-meta.xml
<CustomField>
    <fullName>CheckOutTime__c</fullName>
    <label>Horário de Check Out</label>
    <type>DateTime</type>
</CustomField>