force-app/main/default/objects/Activity/fields/GuestUserLkp__c.field-meta.xml
<CustomField>
    <fullName>GuestUserLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Usuário convidado</description>
    <label>Convidado</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Atividades</relationshipName>
    <type>Lookup</type>
</CustomField>