force-app/main/default/objects/Activity/fields/IsRecurrentBln__c.field-meta.xml
<CustomField>
    <fullName>IsRecurrentBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recorrente</label>
    <type>Checkbox</type>
</CustomField>