force-app/main/default/objects/Activity/fields/QuotaLkp__c.field-meta.xml
<CustomField>
    <fullName>QuotaLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup para cota, para quando preenche o planejamento de vendas</description>
    <label>Cota</label>
    <referenceTo>Quota__c</referenceTo>
    <relationshipLabel>Atividades</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>