force-app/main/default/objects/Activity/fields/ReasonsTxt__c.field-meta.xml
<CustomField>
    <fullName>ReasonsTxt__c</fullName>
    <label>Motivos e Justivativas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>