force-app/main/default/objects/Activity/fields/RecurrenceCreatedBln__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceCreatedBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Criado por Recorrência</label>
    <type>Checkbox</type>
</CustomField>