force-app/main/default/objects/Activity/fields/RecurrenceLimitDte__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceLimitDte__c</fullName>
    <label>Limite de Recorrência</label>
    <type>DateTime</type>
</CustomField>