force-app/main/default/objects/Activity/fields/RecurrenceTypeTxt__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceTypeTxt__c</fullName>
    <label>Tipo de Recorrência</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Semanal</fullName>
            </value>
            <value>
                <fullName>Quinzenal</fullName>
            </value>
            <value>
                <fullName>Mensal</fullName>
            </value>
            <value>
                <fullName>Trimestral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>